--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "node_modules/primeng/resources/themes/vela-blue/theme.css",
               "src/styles.scss"
             ],
             "scripts": []
